tests/snapshots/snapshots__type_error_nil_arithmetic.snap
---
source: tests/snapshots.rs
expression: "analyze_diag(\"function f()\\n  local x = nil\\n  return x + 1\\nend\")"
---
error[E0401]: expected a number: expected number, found nil
  --> 3:10
   |
  3|   return x + 1
   |          ^
